feat: Jenkins 플러그인 다운로더 구현 - 플러그인과 의존성 자동 다운로드 기능 - 버전 지정 옵션 추가 - 다운로드 디렉토리 지정 옵션 추가 - 진행률 표시 기능 구현

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,15 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Virtual Environment
+venv/
+env/
+.env/
+
+# IDE
+.idea/
+.vscode/
+
+# Jenkins plugins
+plugins/
